--- a/css/style.css
+++ b/css/style.css
@@ -49,9 +49,39 @@ font-size: larger;
 .formulario-criar button:hover, .formulario-atualizar button:hover{
     background-color: rgb(5, 61, 5);
 }
-/* .formulario-criar, .formulario-atualizar{
+  .formulario-criar, .formulario-atualizar{
         display: none;
-} */
+}  
+.botao-adcionar{
+    background-color: green;
+    padding: 15px;
+    font-size: larger;
+    color: aliceblue;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    border: none;
+    border-radius: 15px;
+
+}
+.botao-adcionar:hover{
+    background-color: rgb(21, 175, 21);
+    transition-duration: 10ms;
+    cursor: pointer;
+}
+
+.tabela-exibir{
+    margin-top: 15px;
+    width: 100%;
+}
+
+
+
+
+
+
+
+
+
+
 
 
 @media screen and (max-width: 400px){
