--- a/css/style.css
+++ b/css/style.css
@@ -163,3 +163,50 @@ body {
     align-items: center;
 }
 .banner{ display: grid; place-items: center; }
+
+
+
+.pet-button {
+    padding: 15px 30px;
+    font-size: 18px;
+    font-weight: bold;
+    color: #ffffff;
+    background-color: #6e6bff; /* cor de destaque */
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+    transition: background-color 0.3s ease;
+}
+
+
+.pet-button:hover {
+    background-color: #093d04e8;
+}
+
+
+.pet-button::before {
+    content: '🐾';
+    font-size: 2em;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    opacity: 0;
+    transition: transform 0.3s ease, opacity 0.3s ease;
+}
+
+
+.pet-button:hover::before {
+    transform: translate(-50%, -50%) scale(1);
+    opacity: 0.2;
+}
+.index-body{
+background-color: #403f99;
+color: wheat;
+
+}
+.logo{
+    filter: drop-shadow(0px 1px 66px)
+}
