--- a/css/style.css
+++ b/css/style.css
@@ -124,6 +124,14 @@ body {
 }
 
 @media screen and (max-width: 600px) {
+.buttons{
+     display: grid; 
+     place-items: center; 
+    
+}
+.buttons button{
+    border: 50px;
+}  
     .form-container {
         width: 90%;
     }
@@ -141,12 +149,7 @@ body {
     max-height: 100%;
 }
 
-  @media screen and (max-width: 600px)
-  {
-
-
-}
-
+  
 @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
   .title {
     display: flex;
